--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,9 @@
         <okhttp.version>3.9.0</okhttp.version>
         <testng.version>6.14.3</testng.version>
         <commons-csv.version>1.7</commons-csv.version>
+        <spring.boot.version>2.0.9.RELEASE</spring.boot.version>
     </properties>
+
 
     <modules>
         <module>repeater-plugin-core</module>
@@ -38,28 +40,9 @@
         <module>repeater-aide</module>
     </modules>
 
-    <developers>
-        <developer>
-            <id>zhaoyb1990</id>
-            <name>赵跃兵</name>
-            <email>zhaoyb1990(AT)foxmail(DOT)com</email>
-            <organization>Alibaba Open Source</organization>
-            <organizationUrl>https://github.com/alibaba</organizationUrl>
-            <roles>
-                <role>Developer</role>
-            </roles>
-        </developer>
-    </developers>
-
-    <organization>
-        <name>Alibaba Open Source</name>
-        <url>https://github.com/alibaba</url>
-    </organization>
-
     <dependencyManagement>
         <dependencies>
-            <!-- = = = = = = = = ==-->
-            <!-- self dependencies -->
+
             <dependency>
                 <groupId>com.alibaba.jvm.sandbox</groupId>
                 <artifactId>repeater-plugin-api</artifactId>
@@ -168,31 +151,6 @@
                     <encoding>UTF-8</encoding>
                 </configuration>
             </plugin>
-            <!--<plugin>-->
-                <!--<groupId>org.apache.maven.plugins</groupId>-->
-                <!--<artifactId>maven-javadoc-plugin</artifactId>-->
-                <!--<version>3.0.0-M1</version>-->
-                <!--<executions>-->
-                    <!--<execution>-->
-                        <!--<id>attach-javadocs</id>-->
-                        <!--<goals>-->
-                            <!--<goal>jar</goal>-->
-                        <!--</goals>-->
-                    <!--</execution>-->
-                <!--</executions>-->
-            <!--</plugin>-->
-            <!--<plugin>-->
-                <!--<groupId>org.apache.maven.plugins</groupId>-->
-                <!--<artifactId>maven-source-plugin</artifactId>-->
-                <!--<version>3.0.1</version>-->
-                <!--<executions>-->
-                    <!--<execution>-->
-                        <!--<goals>-->
-                            <!--<goal>jar-no-fork</goal>-->
-                        <!--</goals>-->
-                    <!--</execution>-->
-                <!--</executions>-->
-            <!--</plugin>-->
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>cobertura-maven-plugin</artifactId>
